--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Starbuzz Coffee</title>
-    <link rel="stylesheet" type="text/css" href="starbuzz.css">
+    <link rel="stylesheet" type="text/css" href="css/all.css">
   </head> 
 
   <body>
@@ -14,6 +14,7 @@
 
     <div id="main">
       <h1>QUALITYdsaddsadsadvcvfdsf COFFEE, ddsad CAFFEIN</h1>
+      <h1>QUALITYdsasdsddsdsdsdvfdsf COFFEE, ddsad CAFFEIN</h1>
       <img src="http://fakeimg.pl/350x200/00CED1/FFF/?text=img+placeholder">
       <p>
         At Starbuzz Coffee, we are dedicated to filling all your  caffeine needs through our 
