--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       </p>
       <p>
         And, did we mention <em>caffeine</em>? We've just started funding the guys doing all 
+        And, did we mention <em>caffeine</em>? We've just started funding the guys doing all 
+        And, did we mention <em>caffeine</em>? We've just started funding the guys doing all 
         the wonderful research at the <a href="http://buzz.wickedlysmart.com"
         title="Read all about caffeine on the Buzz">Caffeine Buzz</a>.
         If you want the latest on coffee and other caffeine products, 
